fix(ui): overflow revert

--- a/frontend/theme/extras/main.less
+++ b/frontend/theme/extras/main.less
@@ -1,7 +1,7 @@
-.portal-top,
-.content-area {
-  overflow-x: hidden;
-}
+// .portal-top,
+// .content-area {
+//   overflow-x: hidden;
+// }
 
 body {
   font-display: swap;
